# cpp_rest

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  build.bat  build.sh  clean_for_qtcreator.sh  generate_build_scripts.bat  main.cpp  todo_list.txt
cppdb_windows_cmakelists/: CMakeLists.txt
include/: another_rest_api.hpp  application.hpp  application_state.hpp  black_board_info.hpp  black_board_listener.hpp  black_board_registration.hpp  black_board_registration_info.hpp  byte.hpp  compiler.hpp  concurrent.hpp  console_menu.hpp  console_menu_item.hpp  create_authorization_field.hpp  create_quests.hpp  database_session.hpp  discover_black_board_service.hpp  example_rest_api.hpp  example_type.hpp  except.hpp  get_none_empty_line.hpp  glue.hpp  http_status_code.hpp  http_verb.hpp  invoke.hpp  json.hpp  launch_async_task.hpp  log.hpp  login_response.hpp  namespace_aliases.hpp  noncopyable.hpp  os.hpp  parse_black_board_message.hpp  quest.hpp  request.hpp  response.hpp  rest_api.hpp  rest_client.hpp  rest_controller.hpp  rest_service.hpp  restbed_logger.hpp  (+6 more)
scripts/ci/appveyor/: setup_cppdb.bat  setup_doctest.bat  setup_gsl.bat  setup_mysql_database.bat  setup_nlohmann_json.bat  setup_rapidjson.bat  setup_restbed.bat
scripts/ci/travis/: print_file_if_exists.sh  setup_boost.sh  setup_cppdb.sh  setup_doctest.sh  setup_gsl.sh  setup_mysql_database.sh  setup_nlohmann_json.sh  setup_rapidjson.sh  setup_restbed.sh
scripts/dependencies/linux/: install_boost.sh  install_dependencies.sh  install_mysql.sh
scripts/dependencies/windows/: install_dependencies.bat
scripts/sql/: setup_db.sql
src/: another_rest_api.cpp  application.cpp  application_state.cpp  black_board_info.cpp  black_board_listener.cpp  black_board_registration.cpp  black_board_registration_info.cpp  console_menu.cpp  console_menu_item.cpp  create_authorization_field.cpp  create_quests.cpp  database_session.cpp  discover_black_board_service.cpp  example_rest_api.cpp  example_type.cpp  get_none_empty_line.cpp  http_status_code.cpp  http_verb.cpp  json.cpp  log.cpp  login_response.cpp  main.cpp  parse_black_board_message.cpp  quest.cpp  request.cpp  response.cpp  rest_client.cpp  rest_service.cpp  restbed_logger.cpp  test_type.cpp  test_type_repository.cpp
test/src/: another_rest_api_test.cpp  example_rest_api_test.cpp  json_test.cpp  test.cpp  test_type_repository_test.cpp
windows_launch_in_new_process_application/: launchApplication.sln
windows_launch_in_new_process_application/launchApplication/: launchApplication.vcxproj  main.c
